# Raymarcher

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.md  README.md  imgui.ini
res/: blend.glsl  failedmengersponge.glsl  fractals.glsl  fragment.glsl  jerusalemcube.glsl  mengersponge.glsl  repetition.glsl  shapes.glsl  sierpinskitetrahedron.glsl  vertex.glsl
res/2d/: blend.glsl  fractals.glsl  repetition.glsl  shapes.glsl
res/3d/: blend.glsl  fractals.glsl  repetition.glsl  shapes.glsl
src/: BlendRaymarcher.cpp  BlendRaymarcher.hpp  CMakeLists.txt  DefaultRaymarcher.cpp  DefaultRaymarcher.hpp  FailedMengerSponge.cpp  FailedMengerSponge.hpp  FractalRaymarcher.cpp  FractalRaymarcher.hpp  JerusalemCube.cpp  JerusalemCube.hpp  Main.cpp  Manager.cpp  Manager.hpp  MengerSponge.cpp  MengerSponge.hpp  RayMarcher.cpp  RayMarcher.hpp  Repetition.cpp  Repetition.hpp  ShapesRaymarcher.cpp  ShapesRaymarcher.hpp  SierpinskiTetrahedron.cpp  SierpinskiTetrahedron.hpp
src/2d/: BlendRaymarcher.cpp  BlendRaymarcher.hpp  FractalRaymarcher.cpp  FractalRaymarcher.hpp  Raymarcher2D.cpp  Raymarcher2D.hpp  RepetitionRaymarcher.cpp  RepetitionRaymarcher.hpp  ShapesRaymarcher.cpp  ShapesRaymarcher.hpp
src/3d/: BlendRaymarcher.cpp  BlendRaymarcher.hpp  FractalRaymarcher.cpp  FractalRaymarcher.hpp  Raymarcher3D.cpp  Raymarcher3D.hpp  RepetitionRaymarcher.cpp  RepetitionRaymarcher.hpp  ShapesRaymarcher.cpp  ShapesRaymarcher.hpp
